[package]
name = "ml_connect_four"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20", features = ["ndarray", "autodiff"] }
ratatui = "0.30"
crossterm = "0.28"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[[bin]]
name = "train"
path = "src/bin/train.rs"
