[package]
name = "ml_connect_four"
version = "0.1.0"
edition = "2024"

[dependencies]
burn = { version = "0.20", features = ["wgpu", "autodiff"] }
ratatui = "0.30"
crossterm = "0.28"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
clap = { version = "4", features = ["derive"] }
thiserror = "2"
anyhow = "1"
toml = "0.8"

[dev-dependencies]
tempfile = "3"

[[bin]]
name = "train"
path = "src/bin/train.rs"

[profile.profiling]
inherits = "release"
debug = true        # retain DWARF symbols so perf/flamegraph maps to source lines
codegen-units = 1   # single CGU → more aggressive inlining, reproducible output
